# beamng-ros-integration

./: .gitignore  .gitlab-ci.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  LICENSE.txt  README.md  README.rst  contributing.md  requirements.txt  service_feedback.yml
beamng_agent/: CMakeLists.txt  package.xml
beamng_agent/launch/: agent.launch  control.launch  example.launch
beamng_agent/scripts/: control.py
beamng_control/: CMakeLists.txt  package.xml  setup.py
beamng_control/config/: sensors.json
beamng_control/config/rviz/: example.rviz  example_old.rviz
beamng_control/config/scenarios/: .json  GridMap.json  GridMap_all.json  GridMap_with_sensors.json  empty.json  simple_scenario.json  simple_scenario_cam.json  simple_scenario_no_sensors.json  simple_scenario_pickup.json  simple_scenario_with_lidar.json  simple_scenario_with_sensors.json  smallgrid_all.json  smallgrid_with_sensors.json  utah_scenario_with_cam.json  utah_scenario_with_cam_and_lidar.json  utah_scenario_with_lidar.json  utah_scenario_with_sensor.json  utah_with_all_sensors.json  weather.json  weather_with_sensors.json  west_coast.json  west_coast_GPS.json  west_coast_no_sensors.json  west_coast_rviz_demo.json  west_coast_with_advance_imu.json  west_coast_with_all_sensors.json  west_coast_with_damage.json  west_coast_with_electrics.json  west_coast_with_electrics_WIP copy.json  west_coast_with_electrics_and_lidar.json  west_coast_with_gforce.json  west_coast_with_idealradar.json  west_coast_with_imu.json  west_coast_with_imu_node.json  west_coast_with_lidar.json  west_coast_with_many_vehicles_ultrasonic.json  west_coast_with_radar.json  west_coast_with_roads.json  west_coast_with_sensors.json  west_coast_with_time.json  (+3 more)
beamng_control/config/vehicles/: etk800.json  pickup.json
beamng_control/launch/: bridge.launch  control.launch  control_with_teleop.launch  control_with_teleop_new.launch  example.launch
beamng_control/scripts/beamng_control/: bridge.py  publishers copy.py  publishers.py  sensorHelper.py  test_services.py  test_topics.py
beamng_control/test/: services.test  topics.test
beamng_control/test/scenarios/: smallgrid.json  test_sensors.json
beamng_control/test/vehicles/: etk800.json
beamng_msgs/: CMakeLists.txt  package.xml
beamng_msgs/action/: Step.action
beamng_msgs/msg/: CubicPolynomial.msg  DamageSensor.msg  DeformGroupInfo.msg  ElectricsSensor.msg  GForceSensor.msg  IdealRadarSensor.msg  IdealRadarSensorVehicle.msg  MeshSensor.msg  MeshSensorBeam.msg  MeshSensorNode.msg  PartDamageInfo.msg  PowertrainSensor.msg  PowertrainSensorDevice.msg  RadarReturn.msg  RadarScan.msg  RoadsSensor.msg  ScenarioState.msg  StateSensor.msg  TimeSensor.msg  VehicleControl.msg  VehicleInfo.msg  VehicleInfo_wait.msg  WheelThermalsInfo.msg
beamng_msgs/srv/: GetCurrentVehiclesInfo.srv  GetScenarioState.srv  NavigateToPosition.srv  SpawnVehicle.srv  StartScenario.srv  TeleportVehicle.srv
beamng_teleop_joy/: CMakeLists.txt  package.xml
beamng_teleop_joy/include/beamng_teleop_joy/: beamng_teleop_joy.h
beamng_teleop_joy/launch/: teleop.launch
beamng_teleop_joy/src/: beamng_teleop_joy.cpp
beamng_teleop_keyboard/: CMakeLists.txt  package.xml  setup.py
beamng_teleop_keyboard/launch/: teleop.launch
beamng_teleop_keyboard/nodes/: converter  converter_old  teleop_key  twist_converter.py
docs/: build.sh  deploy_production.sh  requirements.txt  test.py
docs/docs_archive/: README.rst
docs/docs_archive/docs/source/: index.rst  modules.rst
docs/source/: beamng_control.rst  bng_agent_control.rst  bng_teleop_control.rst  bngros.rst  conf.py  index.rst  modules.rst  readme.rst  requirements.txt  simulink.rst
