<?xml version="1.0"?>
<package format="2">
  <name>beamng_agent</name>
  <version>0.6.0</version>
  <description>Vehicle input control.</description>

  <author>BeamNG GmbH</author>
  <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
