<?xml version="1.0"?>
<package format="2">
  <name>beamng_msgs</name>
  <version>0.0.0</version>
  <description>The beamng_msgs package.</description>

  <maintainer email="info@beamng.gmbh">BeamNG GmbH</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>
  </export>
</package>
