<?xml version="1.0"?>
<package>
  <name>beamng_teleop_joy</name>
  <version>0.1.3</version>
  <description>
    Provides teleoperation using joystick to move the vehicles in BemaNG simulation using geometry messages 
  </description>  <maintainer email="info@beamng.gmbh">BeamNG GmbH</maintainer>
  <license>MIT</license>
  <author email="info@beamng.gmbh">BeamNG GmbH</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
