<?xml version="1.0"?>
<package format="2">
  <name>beamng_teleop_keyboard</name>
  <version>1.2.1</version>
  <description>
    Provides teleoperation using keyboard to move the vehicles in BemaNG simulation using geometry messages 
  </description>
  <license>MIT</license>
  <author>BeamNG GmbH</author>
  <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
